--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/notifications": "^7.13.2",
     "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tabler/icons-react": "^3.19.0",
     "axios": "^1.7.7",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
