--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "@mantine/notifications": "^7.13.3",
     "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.2.7",
-
-    "@tabler/icons-react": "^3.19.0",
-
+    "@tanstack/react-query": "^5.59.9",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "mantine-react-table": "^2.0.0-beta.6",
@@ -53,7 +51,7 @@
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.3",
-    "vite": "^5.4.9"
+    "vite": "^5.4.11"
   },
   "lint-staged": {
     "*.{js,jsx}": [
