--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@tabler/icons-react": "^3.19.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "mantine-react-table": "^2.0.0-beta.6",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -57,7 +60,7 @@
     "*.{js,jsx}": [
       "prettier --write",
       "eslint --fix",
-     "git add"
+      "git add"
     ]
   }
 }
